# ferray-wasm-poc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
scripts/: build-wasm.sh
src/: lib.rs
svelte-app/: index.html  og-routes.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
svelte-app/scripts/: inject-og.js  svg2png.js
svelte-app/src/: App.svelte  app.css  app.html
svelte-app/src/lib/: BarbaultBasket.svelte  CounterexampleLab.svelte  FftAnalyzer.svelte  GaussianBlur.svelte  Heatmap.svelte  Hero.svelte  Jacobian.svelte  SumOfSquares.svelte  TechStack.svelte  WaveAndStats.svelte  WindowGallery.svelte
svelte-app/src/lib/wasm/: ferray_wasm_poc_bg.wasm  loader.ts
svelte-app/src/routes/: +layout.svelte  +page.svelte
svelte-app/src/routes/barbault-basket/: +page.svelte
svelte-app/src/routes/counterexample-lab/: +page.svelte
svelte-app/src/routes/fft/: +page.svelte
svelte-app/src/routes/gaussian-blur/: +page.svelte
svelte-app/src/routes/heatmap/: +page.svelte
svelte-app/src/routes/jacobian/: +page.svelte
svelte-app/src/routes/sine-wave/: +page.svelte
svelte-app/src/routes/sum-of-squares/: +page.svelte
svelte-app/src/routes/window-functions/: +page.svelte
web/: index.html
web/pkg/: ferray_wasm_poc.js  ferray_wasm_poc_bg.wasm
