[package]
name = "ferray-wasm-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ferray-core = { git = "https://github.com/riziles/ferray-riz-dev", branch = "feat/wasm-support" }
ferray-ufunc = { git = "https://github.com/riziles/ferray-riz-dev", branch = "feat/wasm-support" }
ferray-stats = { git = "https://github.com/riziles/ferray-riz-dev", branch = "feat/wasm-support" }
wasm-bindgen = "0.2"
